# KaRadio32_4

./: .gitignore  CLAUDE.md  CMakeLists.txt  HardwareConfig.md  Interface.md  README.md  partitions.csv  partitions.ttgo_tdisplay_s3.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
boards/: README.md  nvs_partition.bat  nvs_partition_generator.sh  nvs_partition_genlocal.sh  ttgo_tdisplay_s3.csv
build-ttgo-t-display-s3/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_app_args  flash_args  flash_args.in  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig  x509_crt_bundle.S
build-ttgo-t-display-s3/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build-ttgo-t-display-s3/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
build-ttgo-t-display-s3/bootloader/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build-ttgo-t-display-s3/bootloader/esp-idf/: cmake_install.cmake
build-ttgo-t-display-s3/bootloader/gdbinit/: gdbinit  symbols
build-ttgo-t-display-s3/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build-ttgo-t-display-s3/esp-idf/: cmake_install.cmake
build-ttgo-t-display-s3/esp-idf/MerusAudio/: cmake_install.cmake
build-ttgo-t-display-s3/esp-idf/app_trace/: cmake_install.cmake
build-ttgo-t-display-s3/gdbinit/: gdbinit  symbols
build-ttgo-t-display-s3/log/: idf_py_stderr_output_1080621  idf_py_stdout_output_1080621  idf_py_stdout_output_1083060  idf_py_stdout_output_183  idf_py_stdout_output_272  idf_py_stdout_output_47  idf_py_stdout_output_51  idf_py_stdout_output_56
components/MerusAudio/: MerusAudio.c
components/audio_player/: CMakeLists.txt  audio_player.c
components/audio_renderer/: CMakeLists.txt  audio_renderer.c
components/common/: CMakeLists.txt
components/fdk-aac_decoder/: CMakeLists.txt  fdk_aac_decoder.c
components/fifo/: spiram_fifo.c
components/ucglib/: CMakeLists.txt
components/xpt2046/: CMakeLists.txt  xpt2046.c  xpt2046.h
doom/: CMakeLists.txt  sdkconfig.defaults  zwad-compressed-wad-porting.md
doom/components/eratv_common/: CMakeLists.txt  idf_component.yml
doom/components/eratv_common/include/eratv/: BluetoothJoystick.hpp  FileSystem.hpp  FrameBuffer.hpp
doom/components/eratv_common/include/eratv/player/: AudioPlayer.hpp
doom/components/hagl_hal/: CMakeLists.txt
doom/components/hagl_hal/include/: hagl_hal.h  hagl_hal_color.h
doom/components/hagl_hal/src/: hagl_hal_i80.c
doom/components/prboom/: CMakeLists.txt  d_main.c  linker.lf  m_menu.c  m_misc.c  w_wad.c  w_wad.h
doom/components/tinfl/: CMakeLists.txt
doom/components/tinfl/include/: miniz.h  miniz_export.h
doom/main/: CMakeLists.txt  main.cpp
doom/main/resources/: menusmall.h  splashimg.h
doom/tools/: compress-wad.sh  wadcompress.c
main/: CMakeLists.txt  ClickButtons.c  ClickJoystick.c  addon.c  addonucg.c  app_main4.h  eeprom.c  gpio.c  idf_component.yml  interface.c  ntp.c  ota.c  servers.c  telnet.c  vs1053.c  webclient.c  webserver.c
main/include/: addon.h  app_main.h  el_uart.h  gpio.h  ota.h  webclient.h  webserver.h
tools/: build_all.sh  flash_all.sh  flash_wads.sh
(+161 files in other folders)
